# forgedoc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/forgedoc/: __init__.py  core.py  markdown.py
src/forgedoc/builders/: __init__.py  a3_sheet.py  control_plan.py  doe_run_cards.py  eight_d.py  investigation.py  knowledge_health.py  supplier_claim.py
src/forgedoc/renderers/: __init__.py  docx.py  html.py  pdf.py
src/forgedoc/styles/: __init__.py  default.py
tests/: test_builders.py  test_builders_extended.py  test_core.py  test_markdown.py  test_styles.py
