[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgedoc"
version = "0.1.0"
description = "Opinionated document builder for quality management systems"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eric Wolters", email = "eric.wolters@svend.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.0"]
qms = [
    "python-docx>=1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/ewolters/forgedoc"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
